overall-view of port and states

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
     margin: 10% auto;
     width: 1300px;
     height: 800px;
-    background-color: #ddd;
+    background-color: rgb(80, 75, 75);
 }
 
 .title{
